trunk/Archive2/68/43cdea14cdd1c7/output
main.cpp: In function 'int main()':
main.cpp:20:22: error: aggregate 'varint<unsigned int> test' has incomplete type and cannot be defined
     varint<uint32_t> test;
                      ^
